# green-recorder

./: .gitignore  README.md  green-recorder  green-recorder.in  meson.build  setup.py
data/: AboutWindow.ui  AppWindow.ui  PrefsWindow.ui  XorgAreaChoser.ui  app-menu.ui  green-recorder.gresource.xml  meson.build
greenrecorder/: __init__.py  about.py  preferences.py  recorder.py  screenrecorder.py  util.py
po/: LINGUAS  POTFILES.in  green-recorder.pot  meson.build
ui/: ui.glade
